@@ -111,6 +111,11 @@ namespace Mono.Zeroconf
             get { return hosttarget; }
             set { 
                 hosttarget = value;
+                
+                if(hosttarget.EndsWith(".local.")) {
+                    hosttarget = hosttarget.Substring(0, hosttarget.Length - 7);
+                }
+                
                 hostentry = Dns.GetHostByName(value);
             }
         }
