@@ -1,3 +1,9 @@
+2006-02-20  Aaron Bockover  <aaron@abock.org>
+
+	* Mono.Zeroconf/Service.cs (set_HostTarget): If target ends with .local.,
+	strip it before resolving as System.Net.Dns.GetHostByName will fail to
+	resolve if there is a VPN connection
+
 2006-02-15  Aaron Bockover  <aaron@abock.org>
 
 	* Mono.Zeroconf: Renamed everything from Mono.ZeroConf to Mono.Zeroconf
